--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,3 +15,8 @@
   font-size: 16px!important;
   font-style: italic!important;
 }
+
+.project-bg{
+  background-color: #f8dd30;
+  height: 100vh;
+}
