--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,3 +20,13 @@
   background-color: #f8dd30;
   height: 100vh;
 }
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
+.error-message{
+  height: 5px;
+  color: #C70000;
+  font-size: 14px;
+}
